language/move-lang/tests/move_check/typing/subtype_return_invalid.exp
error: 

   ┌── tests/move_check/typing/subtype_return_invalid.move:5:9 ───
   │
 5 │         u
   │         ^ Invalid return expression
   ·
 4 │     fun t0(u: &u64): &mut u64 {
   │               ---- The type: '&u64'
   ·
 4 │     fun t0(u: &u64): &mut u64 {
   │                      -------- Is not a subtype of: '&mut u64'
   │

error: 

   ┌── tests/move_check/typing/subtype_return_invalid.move:9:9 ───
   │
 9 │         s
   │         ^ Invalid return expression
   ·
 8 │     fun t1(s: &S): &mut S {
   │               -- The type: '&0x8675309::M::S'
   ·
 8 │     fun t1(s: &S): &mut S {
   │                    ------ Is not a subtype of: '&mut 0x8675309::M::S'
   │

error: 

    ┌── tests/move_check/typing/subtype_return_invalid.move:13:9 ───
    │
 13 │         (u1, u2)
    │         ^^^^^^^^ Invalid return expression
    ·
 12 │     fun t2(u1: &u64, u2: &u64): (&u64, &mut u64) {
    │                          ---- The type: '&u64'
    ·
 12 │     fun t2(u1: &u64, u2: &u64): (&u64, &mut u64) {
    │                                        -------- Is not a subtype of: '&mut u64'
    │

error: 

    ┌── tests/move_check/typing/subtype_return_invalid.move:17:9 ───
    │
 17 │         (u1, u2)
    │         ^^^^^^^^ Invalid return expression
    ·
 16 │     fun t3(u1: &u64, u2: &u64): (&mut u64, &u64) {
    │                ---- The type: '&u64'
    ·
 16 │     fun t3(u1: &u64, u2: &u64): (&mut u64, &u64) {
    │                                  -------- Is not a subtype of: '&mut u64'
    │

error: 

    ┌── tests/move_check/typing/subtype_return_invalid.move:21:9 ───
    │
 21 │         (u1, u2)
    │         ^^^^^^^^ Invalid return expression
    ·
 20 │     fun t4(u1: &u64, u2: &u64): (&mut u64, &mut u64) {
    │                ---- The type: '&u64'
    ·
 20 │     fun t4(u1: &u64, u2: &u64): (&mut u64, &mut u64) {
    │                                  -------- Is not a subtype of: '&mut u64'
    │

